--- a/proyecto.html
+++ b/proyecto.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="form-group">
-        <label for="documento">Nro de cedula</label>
+        <label for="documento">Nro de cedula (ves?)</label>
         <input type="text" id="documento">
     </div>
     <hr>
